src/Editor/Util/ActionButton/_actionbutton.scss
/*
 * Copyright 2020 WICKLETS LLC
 *
 * This file is part of Wick Editor.
 *
 * Wick Editor is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Wick Editor is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Wick Editor.  If not, see <https://www.gnu.org/licenses/>.
 */

@import 'Editor/_wickbrand.scss';

$action-button-transition-duration: .2s;

.action-button {
  width: 100%;
  height: 100%;
}

.action-button-single-icon {
  margin: 0 auto;
  padding: 1px;
}

.action-button-text {
  height: 100%;
  text-align: center;
  display: flex;
  align-items: center;
}

.action-button-dropdown-icon-container {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}


.dropdown-extra-icon {
  height: 6px;
  margin-top: 1px;
}

.dropdown-action-button-icon {
  height: 80%;
}

.action-button-icon-text-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  max-height: 100%;
}

.action-button-text-icon {
  min-height: 24px;
  max-height: 24px; 
  margin-right: 6px
}

// Button color schemes
.action-button-blue {
  -webkit-transition-duration: $action-button-transition-duration; /* Safari */
  transition-duration: $action-button-transition-duration;

  background-color: $deep-cereulian;
  color: $deep-cereulian-text;
}

.action-button-blue:hover {
  background-color: $deep-cereulian-light;
  color: $deep-cereulian-text;
}

.action-button-blue:active {
  background-color: $deep-cereulian-dark;
  color: $deep-cereulian-text;
}

.action-button-blue.active-button {
  background-color: $deep-cereulian-dark;
  color: $deep-cereulian-text;
}

.action-button-sky {
  -webkit-transition-duration: $action-button-transition-duration; /* Safari */
  transition-duration: $action-button-transition-duration;

  background-color: $sleepy-sky-dark;
  color: $sleepy-sky-text;
}

.action-button-sky:hover {
  background-color: $sleepy-sky;
  color: $sleepy-sky-text;
}

.action-button-sky:active {
  background-color: $sleepy-sky-light;
  color: $sleepy-sky-text;
}

.action-button-sky.active-button {
  background-color: $sleepy-sky-light;
  color: $sleepy-sky-text;
}

.action-button-red {
  -webkit-transition-duration: $action-button-transition-duration; /* Safari */
  transition-duration: $action-button-transition-duration;

  background-color: $wick-red;
  color: $wick-red-text;
}

.action-button-red:hover {
  background-color: $wick-red-light;
  color: $wick-red-text;
}

.action-button-red:active {
  background-color: $wick-red-dark;
  color: $wick-red-text;
}

.action-button-red.active-button {
  background-color: $wick-red-dark;
  color: $wick-red-text;
}

.action-button-dark-red {
  -webkit-transition-duration: $action-button-transition-duration; /* Safari */
  transition-duration: $action-button-transition-duration;

  background-color: #A30000;
  color: $wick-red-text;
}

.action-button-dark-red:hover {
  background-color: #B30000;
  color: $wick-red-text;
}

.action-button-dark-red:active {
  background-color: #940000;
  color: $wick-red-text;
}

.action-button-dark-red.active-button {
  background-color: #940000;
  color: $wick-red-text;
}

.action-button-green {
  -webkit-transition-duration: $action-button-transition-duration; /* Safari */
  transition-duration: $action-button-transition-duration;

  background-color: $wick-green;
  color: $wick-green-text;
}

.action-button-green:hover {
  background-color: $wick-green-light;
  color: $wick-green-text;
}

.action-button-green:active {
  background-color: $wick-green-dark;
  color: $wick-green-text;
}

.action-button-green.active-button {
  background-color: $wick-green-dark;
  color: $wick-green-text;
}

.action-button-yellow {
  -webkit-transition-duration: $action-button-transition-duration; /* Safari */
  transition-duration: $action-button-transition-duration;

  background-color: $wick-yellow;
  color: $wick-yellow-text;
}

.action-button-yellow:hover {
  background-color: $wick-yellow-light;
  color: $wick-yellow-text;
}

.action-button-yellow:active {
  background-color: $wick-yellow-dark;
  color: $wick-yellow-text;
}

.action-button-yellow.active-button {
  background-color: $wick-yellow-dark;
  color: $wick-yellow-text;
}

.action-button-tool {
  -webkit-transition-duration: $action-button-transition-duration; /* Safari */
  transition-duration: $action-button-transition-duration;

  background-color: $editor-primary;
  color: black;
}

.action-button-tool:hover {
  //background-color: $wick-green-light;
  border: 2px solid #29F1A3;
  color: black;
}

.action-button-tool:active {
  //background-color: $wick-green-dark;
  border: 2px solid #01C094;
  color: black;
}

.action-button-tool.active-button {
  //background-color: $wick-green-dark;
  border: 2px solid #01C094;
  color: black;
}

.action-button-menu {
  -webkit-transition-duration: $action-button-transition-duration; /* Safari */
  transition-duration: $action-button-transition-duration;

  background-color: $editor-primary;
  color: $editor-menubar-option-text;
}

.action-button-menu:hover {
  color: $editor-menubar-project-text;
}

.action-button-menu:active {
  color: $editor-menubar-project-text;
}

.action-button-menu.active-button {
  color: $editor-menubar-project-text;
}

.action-button-menu img{
  width: auto;
}
/* ... */

